# speech_output_server

./: CMakeLists.txt  README.md  package.xml
launch/: speech_out.launch.py
src/: speech_action_client.cpp  speech_action_server.cpp  speech_output_proc.cpp  speech_output_proc.h
